--- a/app/src/main/res/layout/act5_measure.xml
+++ b/app/src/main/res/layout/act5_measure.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/background_light"
     tools:context="com.techwork.kjc.mvp_project.activity.ACT5_Measure">
 
     <ImageView
@@ -36,6 +37,7 @@
             android:text="측정"
             android:textAlignment="center"
             android:textSize="24sp" />
+
     </android.support.v7.widget.CardView>
 
     <android.support.design.widget.FloatingActionButton
