--- a/app/src/main/res/layout/act5_measure.xml
+++ b/app/src/main/res/layout/act5_measure.xml
@@ -74,4 +74,17 @@
         app:layout_constraintTop_toBottomOf="@+id/btnAdd"
         tools:listitem="@layout/item_measure" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btnReload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:clickable="true"
+        app:fabSize="mini"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ic_replay_black_24dp" />
+
 </android.support.constraint.ConstraintLayout>
