--- a/app/src/main/res/layout/act5_measure.xml
+++ b/app/src/main/res/layout/act5_measure.xml
@@ -87,4 +87,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/ic_replay_black_24dp" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btnCancle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:clickable="true"
+        app:backgroundTint="@android:color/holo_red_light"
+        app:fabSize="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_close_black_24dp" />
+
 </android.support.constraint.ConstraintLayout>
