--- a/app/src/main/res/layout/act7__focus.xml
+++ b/app/src/main/res/layout/act7__focus.xml
@@ -46,7 +46,7 @@
                 android:layout_weight="1"
                 android:text="집중"
                 android:textAlignment="center"
-                android:textColor="black"
+                android:textColor="@color/colorBlack"
                 android:textSize="40sp" />
 
         </LinearLayout>
@@ -68,7 +68,7 @@
                 android:layout_height="match_parent"
                 android:text="팔"
                 android:textAlignment="center"
-                android:textColor="black"
+                android:textColor="@color/colorBlack"
                 android:textSize="30dp" />
 
         </LinearLayout>
@@ -83,7 +83,7 @@
                 android:layout_height="match_parent"
                 android:text="다리"
                 android:textAlignment="center"
-                android:textColor="black"
+                android:textColor="@color/colorBlack"
                 android:textSize="30dp" />
 
         </LinearLayout>
@@ -98,7 +98,7 @@
                 android:layout_height="match_parent"
                 android:text="등(배)"
                 android:textAlignment="center"
-                android:textColor="black"
+                android:textColor="@color/colorBlack"
                 android:textSize="30dp" />
         </LinearLayout>
         <LinearLayout
@@ -112,7 +112,7 @@
                 android:layout_height="match_parent"
                 android:text="전신"
                 android:textAlignment="center"
-                android:textColor="black"
+                android:textColor="@color/colorBlack"
                 android:textSize="30dp" />
         </LinearLayout>
     </LinearLayout>
