--- a/app/src/main/res/layout/act1_splash.xml
+++ b/app/src/main/res/layout/act1_splash.xml
@@ -33,7 +33,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView3"
             app:layout_constraintTop_toBottomOf="@+id/imageView4"
-            app:srcCompat="@color/colorAccent" />
+            app:srcCompat="@drawable/fource" />
 
         <ImageView
             android:id="@+id/imageView2"
@@ -47,7 +47,7 @@
             app:layout_constraintEnd_toStartOf="@+id/imageView4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@color/colorAccent" />
+            app:srcCompat="@drawable/first" />
 
         <ImageView
             android:id="@+id/imageView3"
@@ -61,7 +61,7 @@
             app:layout_constraintEnd_toStartOf="@+id/act2_image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView2"
-            app:srcCompat="@color/colorAccent" />
+            app:srcCompat="@drawable/third" />
 
         <ImageView
             android:id="@+id/imageView4"
@@ -75,7 +75,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@color/colorAccent" />
+            app:srcCompat="@drawable/second" />
     </android.support.constraint.ConstraintLayout>
 
     <android.support.v7.widget.CardView
