--- a/app/src/main/res/layout/act7_focus.xml
+++ b/app/src/main/res/layout/act7_focus.xml
@@ -112,4 +112,13 @@
             app:srcCompat="@android:color/background_light" />
     </android.support.constraint.ConstraintLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="120dp">
+
+
+
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
