자동로그인 + 데이터 받을 준

--- a/app/src/main/res/layout/act4_mainmenu.xml
+++ b/app/src/main/res/layout/act4_mainmenu.xml
@@ -11,8 +11,13 @@
         android:id="@+id/act4_menu"
         android:layout_height="0dp"
         android:layout_width="match_parent"
-        android:layout_weight="0.6"
+        android:layout_weight="0.8"
         />
-
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"
+        android:id="@+id/act4_logout"
+        />
 </LinearLayout>
 
