--- a/app/src/main/res/layout/act10_record.xml
+++ b/app/src/main/res/layout/act10_record.xml
@@ -86,7 +86,7 @@
             android:layout_height="0dp"
             android:layout_weight="0.1">
             <Button
-                android:id="@+id/mvp"
+                android:id="@+id/king"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
