--- a/app/src/main/res/layout/act1_splash.xml
+++ b/app/src/main/res/layout/act1_splash.xml
@@ -9,8 +9,8 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="268dp"
+        android:layout_height="286dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -24,7 +24,7 @@
         <ImageView
             android:id="@+id/act2_image"
             android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_height="120dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
@@ -38,7 +38,7 @@
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_height="120dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
@@ -52,7 +52,7 @@
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_height="120dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
@@ -66,7 +66,7 @@
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_height="120dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
@@ -103,7 +103,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="48dp"
         android:text="회원가입"
         app:layout_constraintEnd_toStartOf="@+id/linkSignin"
         app:layout_constraintStart_toStartOf="parent"
@@ -119,6 +119,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/linkSignup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/linkSignup"
-        app:layout_constraintTop_toTopOf="@+id/linkSignup" />
+        app:layout_constraintTop_toTopOf="@+id/linkSignup"
+        app:layout_constraintVertical_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
