--- a/app/src/main/res/layout/act7_sel.xml
+++ b/app/src/main/res/layout/act7_sel.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/colorAccent" />
+        app:srcCompat="@drawable/p" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
@@ -118,6 +118,7 @@
         android:layout_marginTop="120dp"
         android:weightSum="1"
         android:orientation="vertical"
+        android:background="@color/colorWhite"
         >
 
         <LinearLayout
