--- a/app/src/main/res/layout/act1_splash.xml
+++ b/app/src/main/res/layout/act1_splash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/background_light"
+    android:background="#5275f2"
     tools:context="com.techwork.kjc.mvp_project.activity.ACT1_Splash">
 
     <android.support.constraint.ConstraintLayout
