--- a/app/src/main/res/layout/act4_submenu.xml
+++ b/app/src/main/res/layout/act4_submenu.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:weightSum="1"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
         <LinearLayout
             android:layout_width="0dp"
@@ -23,7 +24,8 @@
             android:layout_height="match_parent"
             android:layout_weight="0.35"
             android:weightSum="1"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
