순환 파트 완성

--- a/app/src/main/res/layout/dialog_show_prescription.xml
+++ b/app/src/main/res/layout/dialog_show_prescription.xml
@@ -155,7 +155,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/txtBack" />
 
                 <TextView
-                    android:id="@+id/txtBody"
+                    android:id="@+id/txtFourth"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
