대결 판정 코드 추가

--- a/app/src/main/res/layout/act2__register.xml
+++ b/app/src/main/res/layout/act2__register.xml
@@ -276,7 +276,7 @@
                 android:id="@+id/act2_image"
                 android:layout_width="match_parent"
                 android:layout_height="227dp"
-                app:srcCompat="@drawable/default" />
+                app:srcCompat="@drawable/default_profile_image" />
         </LinearLayout>
 
     </LinearLayout>
