--- a/app/src/main/res/layout/act10_mvp.xml
+++ b/app/src/main/res/layout/act10_mvp.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/colorAccent" />
+        app:srcCompat="@drawable/r" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
