--- a/app/src/main/res/layout/act3_login.xml
+++ b/app/src/main/res/layout/act3_login.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     android:weightSum="1"
     android:orientation="vertical"
-    android:background="@color/colorWhite"
     >
     <LinearLayout
         android:layout_height="0dp"
@@ -19,7 +18,6 @@
             android:layout_height="match_parent"
             android:layout_width="0dp"
             android:layout_weight="0.6"
-            android:textColor="@color/colorBlack"
             android:textSize="30dp"
             android:text="MVP_Project"
             android:textAlignment="center"
@@ -43,14 +41,16 @@
             android:orientation="horizontal"
             android:background="@color/colorTest"
             >
+
             <EditText
+                android:id="@+id/act3_id"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.9"
-                android:hint="ID"
                 android:gravity="center"
+                android:hint="ID"
+                android:inputType="textEmailAddress"
                 android:textAlignment="textStart"
-                android:id="@+id/act3_id"
                 tools:ignore="RtlCompat" />
         </LinearLayout>
         <LinearLayout
@@ -63,14 +63,16 @@
             android:orientation="horizontal"
             android:background="@color/colorTest"
             >
+
             <EditText
+                android:id="@+id/act3_pw"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.9"
-                android:hint="PW"
                 android:gravity="center"
+                android:hint="PW"
+                android:inputType="textWebPassword"
                 android:textAlignment="textStart"
-                android:id="@+id/act3_pw"
                 tools:ignore="RtlCompat" />
         </LinearLayout>
     </LinearLayout>
