--- a/app/src/main/res/layout/act6_versus.xml
+++ b/app/src/main/res/layout/act6_versus.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/colorAccent" />
+        app:srcCompat="@drawable/v"/>
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
