--- a/app/src/main/res/layout/act7_sel.xml
+++ b/app/src/main/res/layout/act7_sel.xml
@@ -118,6 +118,7 @@
         android:layout_marginTop="120dp"
         android:weightSum="1"
         android:orientation="vertical"
+        android:background="@color/colorWhite"
         >
 
         <LinearLayout
