--- a/app/src/main/res/layout/act5_measure.xml
+++ b/app/src/main/res/layout/act5_measure.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/main1"
     tools:context="com.techwork.kjc.mvp_project.activity.ACT5_Measure">
 
     <ImageView
@@ -34,7 +35,9 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:text="측정"
+            android:background="@color/main1"
             android:textAlignment="center"
+            android:textStyle="bold"
             android:textSize="24sp" />
 
     </android.support.v7.widget.CardView>
