--- a/app/src/main/res/layout/act8_focus_graph.xml
+++ b/app/src/main/res/layout/act8_focus_graph.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/main1"
     android:layout_height="match_parent">
 
     <ImageView
@@ -32,6 +33,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
+            android:background="@color/main1"
+            android:textStyle="bold"
             android:text="집중"
             android:textAlignment="center"
             android:textSize="24sp" />
@@ -63,6 +66,7 @@
                     android:text="TRACK"
                     android:textSize="30dp"
                     android:gravity="center"
+                    android:background="@color/main1_1"
                     />
 
             </LinearLayout>
@@ -79,6 +83,7 @@
                     android:text="HISTORY"
                     android:textSize="30dp"
                     android:gravity="center"
+                    android:background="@color/main1_1"
                     />
 
             </LinearLayout>
@@ -95,7 +100,7 @@
                     android:text="GRAPH"
                     android:textSize="30dp"
                     android:gravity="center"
-                    android:background="@color/colorPrimary"
+                    android:background="@color/main1_1"
                     />
 
             </LinearLayout>
