--- a/app/src/main/res/layout/act8_focus_history.xml
+++ b/app/src/main/res/layout/act8_focus_history.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/main1"
     android:layout_height="match_parent">
 
     <ImageView
@@ -33,6 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:text="집중"
+            android:background="@color/main1"
             android:textAlignment="center"
             android:textSize="24sp" />
 
@@ -63,6 +66,7 @@
                     android:text="TRACK"
                     android:textSize="30dp"
                     android:gravity="center"
+                    android:background="@color/main1_1"
                     />
 
             </LinearLayout>
@@ -79,7 +83,7 @@
                     android:text="HISTORY"
                     android:textSize="30dp"
                     android:gravity="center"
-                    android:background="@color/colorPrimary"
+                    android:background="@color/main1_2"
                     />
 
             </LinearLayout>
@@ -95,6 +99,7 @@
                     android:layout_height="match_parent"
                     android:text="GRAPH"
                     android:textSize="30dp"
+                    android:background="@color/main1_1"
                     android:gravity="center"
                     />
 
