--- a/app/src/main/res/layout/act8_focus_track.xml
+++ b/app/src/main/res/layout/act8_focus_track.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/main1"
     android:layout_height="match_parent">
 
     <ImageView
@@ -33,6 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:text="집중"
+            android:background="@color/main1"
             android:textAlignment="center"
             android:textSize="24sp" />
 
@@ -63,7 +65,7 @@
                     android:text="TRACK"
                     android:textSize="30dp"
                     android:gravity="center"
-                    android:background="@color/colorPrimary"
+                    android:background="@color/main1_2"
                     />
 
             </LinearLayout>
@@ -80,7 +82,7 @@
                     android:text="HISTORY"
                     android:textSize="30dp"
                     android:gravity="center"
-
+                    android:background="@color/main1_1"
                     />
 
             </LinearLayout>
@@ -97,13 +99,10 @@
                     android:text="GRAPH"
                     android:textSize="30dp"
                     android:gravity="center"
+                    android:background="@color/main1_1"
                     />
 
             </LinearLayout>
-
-
-
-
         </LinearLayout>
 
         <LinearLayout
@@ -194,13 +193,7 @@
                 android:layout_weight="0.5"
                 tools:listitem="@layout/item_focus"
                 >
-
             </android.support.v7.widget.RecyclerView>
-
         </LinearLayout>
-
-
     </LinearLayout>
-
-
 </android.support.constraint.ConstraintLayout>
