--- a/app/src/main/res/layout/act9_recursive.xml
+++ b/app/src/main/res/layout/act9_recursive.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/main1"
     android:layout_height="match_parent">
 
     <ImageView
@@ -35,6 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:text="순환"
+            android:background="@color/main1_1"
             android:textAlignment="center"
             android:textSize="24sp" />
 
