--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
 
     <color name="main1">#A7E3CB</color>
     <color name="main1_1">#9dceba</color>
+    <color name="main1_2">#909c97</color>
     <color name="main2">#EBED9F</color>
     <color name="main3">#FED3B6</color>
     <color name="main4">#FDA8A5</color>
