--- a/app/src/main/res/layout/act7_sel.xml
+++ b/app/src/main/res/layout/act7_sel.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+
         app:srcCompat="@drawable/p" />
 
     <android.support.v7.widget.CardView
@@ -124,7 +125,7 @@
         android:layout_marginTop="120dp"
         android:weightSum="1"
         android:orientation="vertical"
-        android:background="@color/main1"
+        android:background="@color/colorWhite"
         >
 
         <LinearLayout
