--- a/app/src/main/res/layout/act8_0training.xml
+++ b/app/src/main/res/layout/act8_0training.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/colorAccent" />
+        app:srcCompat="@drawable/p" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
